<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GugleFile</string>
    <string name="about_rss">关于程序</string>
    <string name="close_rss_menu">关闭</string>
    <string name="del_rss_success">删除成功</string>
    <string name="sure_menu">确定</string>
    <string name="rss_loading">正在加载中，请稍候...</string>
    <string name="cancel_menu">取消</string>
    <string name="alert_msg">提示信息</string>
    <string name="no_sdcard">未检测到SD卡</string>
    <string name="finishapp">再按一次退出程序</string>
    <string name="nofile">没有发现文件或文件夹</string>
    <string name="selectChooser">请选择文件打开方式：</string>
    <string name="inputFolderName">请输入新建的文件夹名称</string>
    <string name="optionSuccess">操作成功</string>
    <string name="folderExist">文件夾已經存在</string>
    <string name="optionFail">操作失败</string>
    <string name="optionCopy">复制</string>
    <string name="optionMove">移动</string>
    <string name="optionDelete">删除</string>
    <string name="renameFile">重命名</string>
    <string name="attribute">属性</string>
    <string name="zipfile">压缩</string>
    <string name="unzipfile">解压缩</string>
    <string name="fastWidget">创建快捷方式</string>
    <string name="setAsRoot">设为根目录</string>
    <string name="optionSelect">请选择文件操作</string>
    <string name="deleteFail">该文件夹下还有文件，不能删除！</string>
    <string name="deleteChecked">确定要删除该文件吗？</string>
    <string name="deleting">正在删除，请稍候...</string>
    <string name="copying">正在复制，请稍候...</string>
    <string name="moving">正在移动，请稍候...</string>
    <string name="nofileDo">没有文件需要处理</string>
    <string name="listBy">排序</string>
    <string name="inputfilename">请输入文件名称</string>
    <string name="nofolder">该目录已经不存在</string>
    <string name="filepath">文件路径：</string>
    <string name="filename">文件名称：</string>
    <string name="filecount">文件数量：</string>
    <string name="filesize">文件大小：</string>
    <string name="filemodify">修改时间：</string>
    <string name="counting">正在统计中，请稍候...</string>
    <string name="fileinfo">文件信息</string>
    <string name="listStype">选择文件排序方式</string>
    <string name="sortbyname">按文件名称排序</string>
    <string name="sortbytime">按修改时间排序</string>
    <string name="selectDelFile">选择要删除的文件</string>
    <string name="selectMoveFile">选择要移动的文件</string>
    <string name="selectCopyFile">选择要拷贝的文件</string>
    <string name="about_msg">本程序只适用于Android开发及使用者，作者保留一切权利，任何试图使用此程序来营利的行为都是违法的！程序使用过程中，如果发现BUG，请联系作者：\nQQ：261816582\nEmail：culin003@126.com</string>
	<string name="existunzipfile">输入的解压路径已经存在于当前目录中</string>
	<string name="existzipfile">输入的压缩文件已经存在于该目录中</string>
	<string name="notexistzipfile">需要解压的文件不存在</string>
	<string name="nullinputzipfile">输入解压文件路径为空</string>
	<string name="zippingnow">正在压缩，请稍候...</string>
	<string name="unzippingnow">正在解压，请稍候...</string>
	<string name="cannotunzip">该文件不能解压！</string>
	<string name="inputzipfilename">请输入压缩文件名</string>
	<string name="inputunzipfilepath">请输解压路径</string>
	<string name="notepad">记事本</string>
</resources>